add source links

--- a/Model-and-demo.ipynb
+++ b/Model-and-demo.ipynb
@@ -491,6 +491,10 @@
     }
    ],
    "source": [
+    "# Source: https://www.kaggle.com/c/twitter-sentiment-analysis2/data\n",
+    "# train: https://www.kaggle.com/c/6740/download/train.csv\n",
+    "# test: https://www.kaggle.com/c/6740/download/test.csv\n",
+    "\n",
     "df = pd.read_csv('train.csv', encoding='latin-1')\n",
     "df"
    ]
